; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/iseries/extr_viopath.c_vio_get_event_buffer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/iseries/extr_viopath.c_vio_get_event_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VIOMAJOR_SUBTYPE_SHIFT = common dso_local global i32 0, align 4
@VIO_MAX_SUBTYPES = common dso_local global i32 0, align 4
@event_buffer_available = common dso_local global i32* null, align 8
@event_buffer = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @vio_get_event_buffer(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @VIOMAJOR_SUBTYPE_SHIFT, align 4
  %6 = ashr i32 %4, %5
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @VIO_MAX_SUBTYPES, align 4
  %12 = icmp sge i32 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %9, %1
  store i8* null, i8** %2, align 8
  br label %28

14:                                               ; preds = %9
  %15 = load i32*, i32** @event_buffer_available, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = call i64 @atomic_dec_if_positive(i32* %18)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %14
  %22 = load i8*, i8** @event_buffer, align 8
  %23 = load i32, i32* %3, align 4
  %24 = mul nsw i32 %23, 256
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %22, i64 %25
  store i8* %26, i8** %2, align 8
  br label %28

27:                                               ; preds = %14
  store i8* null, i8** %2, align 8
  br label %28

28:                                               ; preds = %27, %21, %13
  %29 = load i8*, i8** %2, align 8
  ret i8* %29
}

declare dso_local i64 @atomic_dec_if_positive(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
